Mastercontroller apis