@@ -1,5 +1,6 @@
 package com.project.kisan_setu.service.impl;
 
+import com.project.kisan_setu.dto.IdNameDto;
 import com.project.kisan_setu.dto.MasterDataResponseDto;
 import com.project.kisan_setu.mapper.MasterMapper;
 import com.project.kisan_setu.repository.*;
@@ -7,17 +8,19 @@ import com.project.kisan_setu.service.MasterService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.stream.Collectors;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
 public class MasterServiceImpl implements MasterService {
+
     private final CropRepository cropRepository;
     private final UnitRepository unitRepository;
     private final StorageRepository storageRepository;
     private final PackagingRepository packagingRepository;
     private final StateRepository stateRepository;
     private final DistrictRepository districtRepository;
+
     @Override
     public MasterDataResponseDto getAllMasters() {
 
@@ -26,39 +29,41 @@ public class MasterServiceImpl implements MasterService {
         response.setCrops(
                 cropRepository.findAll().stream()
                         .map(c -> MasterMapper.toDto(c.getCropId(), c.getCropName()))
-                        .collect(Collectors.toList())
+                        .toList()
         );
 
         response.setUnits(
                 unitRepository.findAll().stream()
                         .map(u -> MasterMapper.toDto(u.getUnitId(), u.getUnitName()))
-                        .collect(Collectors.toList())
+                        .toList()
         );
 
         response.setPackagingTypes(
                 packagingRepository.findAll().stream()
                         .map(p -> MasterMapper.toDto(p.getPackagingId(), p.getPackagingType()))
-                        .collect(Collectors.toList())
+                        .toList()
         );
 
         response.setStorageTypes(
                 storageRepository.findAll().stream()
                         .map(s -> MasterMapper.toDto(s.getStorageId(), s.getStorageType()))
-                        .collect(Collectors.toList())
+                        .toList()
         );
 
         response.setStates(
                 stateRepository.findAll().stream()
                         .map(s -> MasterMapper.toDto(s.getStateId(), s.getName()))
-                        .collect(Collectors.toList())
-        );
-
-        response.setDistricts(
-                districtRepository.findAll().stream()
-                        .map(d -> MasterMapper.toDto(d.getDistrictId(), d.getName()))
-                        .collect(Collectors.toList())
+                        .toList()
         );
 
         return response;
+    }
+
+    @Override
+    public List<IdNameDto> getDistrictsByState(Long stateId) {
+        return districtRepository.findByStateStateId(stateId)
+                .stream()
+                .map(d -> MasterMapper.toDto(d.getDistrictId(), d.getName()))
+                .toList();
     }
 }
